working on dark mode issue

--- a/app/tests.css
+++ b/app/tests.css
@@ -1,4 +1,4 @@
-:root{
+body{
     background-color: white;
     color: black;
 }
